test/force-app/main/default/objects/Permit__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipName>Applicable_Permits</relationshipName>
    <type>Lookup</type>
</CustomField>