test/force-app/main/default/objects/Permit__c/fields/Application_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Approval_Date__c</fullName>
    <label>Application Approval Date</label>
    <type>Date</type>
</CustomField>