test/force-app/main/default/objects/Permit__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <label>Application ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>