test/force-app/main/default/objects/Permit__c/fields/Application_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submit_Date__c</fullName>
    <label>Application Submit Date</label>
    <type>Date</type>
</CustomField>