test/force-app/main/default/objects/Permit__c/fields/Approval_Link__c.field-meta.xml
<CustomField>
    <fullName>Approval_Link__c</fullName>
    <label>Approval Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>