test/force-app/main/default/objects/Permit__c/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Permit Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Development_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Permit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Development_Item__c</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>