test/force-app/main/default/objects/Permit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Permit_Type__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Status__c</columns>
    <columns>Application_Submit_Date__c</columns>
    <columns>Application_Approval_Date__c</columns>
    <columns>Approval_Expiration_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>